# open-copilot-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
open_copilot_cli/: __init__.py  __main__.py  app.py
open_copilot_cli/commands/: __init__.py  ai.py  chat.py
