[tool.poetry]
name = "open-copilot-cli"
version = "0.1.3"
description = "Your customizable assistant in your CLI"
authors = ["Yousuf Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["app.py"]
homepage = "https://github.com/youzarsiph/open-copilot-cli"
repository = "https://github.com/youzarsiph/open-copilot-cli"
documentation = "https://github.com/youzarsiph/open-copilot-cli"
packages = [{ include = "open_copilot_cli" }]

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.25.0"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.5"

[tool.poetry.scripts]
open-copilot = "open_copilot_cli.app:open_copilot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
